duniverse/menhirLib.20200211/test/static/good/parameterized-nonterminal.mly
%token A
%start<int> a
%%

a: b(A) {}

b(X): c(X) d {}

d: A {}
c(X): X {}
