duniverse/menhirLib.20200211/test/static/bad/not-well-founded-rec.mly
%start<int> a
%token A
%%

a: b(A) {}

b(X) : b(b(X)) {}
